2002-10-10  Daniel Steffen  <das@users.sourceforge.net>

	* mac/tclMacOSA.c: (8.4 backport) sprintf fixes, UH 3.4.x changes;
	fix for missing autoname token from TclOSACompileCmd. (bdesgraupes)
	* mac/AppleScript.html(AppleScript delete): doc fix. (bdesgraupes)

	* mac/tcltkMacBuildSupport.sea.hqx: updated MoreFiles to 1.5.3, 
	updated build instructions.

2002-10-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in: removed @MEM_DEBUG_FLAGS@ subst.
	* unix/configure: regen
	* unix/configure.in: removed SC_ENABLE_MEMDEBUG call
	* unix/tcl.m4: replaced SC_ENABLE_MEMDEBUG with a more intelligent
	SC_ENABLE_SYMBOLS that takes yes|no|mem|compile|all as options now.

	* win/tclWinConsole.c (ConsoleCloseProc): only wait on writable
	pipe if there was something to write.  This may prevent infinite
	wait on exit.

2002-08-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* win/Makefile.in (CFLAGS): 
	* unix/Makefile.in (MEM_DEBUG_FLAGS): Added usage of @MEM_DEBUG_FLAGS@.
	* win/configure.in:
	* unix/configure.in: Added usage of SC_ENABLE_MEMDEBUG.
	* win/tcl.m4:
	* unix/tcl.m4: Added macro SC_ENABLE_MEMDEBUG. Allows a user of
	  configure to (de)activate memory validation and debugging
	  (TCL_MEM_DEBUG). No need to modify the makefile anymore.

2002-07-30  Mo DeJong  <mdejong@users.sourceforge.net>

	Revert incorrect RANLIB related changed added
	to support OS X.
	
	* unix/Makefile.in: Don't try to conditionally
	run RANLIB in the Makefile.
	* unix/configure: Regen.
	* unix/configure.in: Remove incorrect setting
	of MAKE_LIB and set RANLIB to : when building
	a shared library.

2002-07-24  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in: backport of corrected fix for [Bug 529801]:
	ranlib needed for static builds on Mac OS X.
	* unix/configure: Regen.

2002-07-21  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest1.0/tcltest.tcl:  Corrected reaction to existing
	but false ::tcl_interactive.
